Add project zend-hydrator

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "polygones/repository"]
 	path = polygones/repository
 	url = git://github.com/codisart/polygones.git
+[submodule "zend-hydrator/repository"]
+	path = zend-hydrator/repository
+	url = git://github.com/codisart/zend-hydrator.git
