Add porject phing

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "zend-hydrator/repository"]
 	path = zend-hydrator/repository
 	url = git://github.com/codisart/zend-hydrator.git
+[submodule "phing/repository"]
+	path = phing/repository
+	url = git://github.com/codisart/phing.git
