--- a/zend-validator/Vagrantfile
+++ b/zend-validator/Vagrantfile
@@ -74,7 +74,7 @@ Vagrant.configure("2") do |config|
     wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
     echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > /etc/apt/sources.list.d/php.list
     apt-get update
-    apt-get install php7.1 php7.1-xml php7.1-curl -y
+    apt-get install php7.1 php7.1-xdebug php7.1-xml php7.1-curl php7.1-mbstring php7.1-intl -y
     curl -Ss https://getcomposer.org/installer | php
     mv composer.phar /usr/bin/composer
     su vagrant
