--- a/zend-validator/Vagrantfile
+++ b/zend-validator/Vagrantfile
@@ -81,5 +81,6 @@ Vagrant.configure("2") do |config|
     cd /var/www/zend-validator
     composer install --quiet
     echo "export COMPOSER_ROOT_VERSION=#{version}" >> /home/vagrant/.profile
+    echo "cd /var/www/zend-validator" >> /home/vagrant/.bashrc
   SHELL
 end
