--- a/zend-file/Vagrantfile
+++ b/zend-file/Vagrantfile
@@ -70,11 +70,12 @@ Vagrant.configure("2") do |config|
     wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
     echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > /etc/apt/sources.list.d/php.list
     apt-get -qq update
-    apt-get -qq install php7.1 php7.1-xdebug php7.1-xml -y
+    apt-get -qq install php7.1 php7.1-xdebug php7.1-xml php7.1-mbstring -y
     curl -Ss https://getcomposer.org/installer | php
     mv composer.phar /usr/bin/composer
     su vagrant
     cd /var/www/zend-file
     composer install --quiet
+    echo "cd /var/www/zend-file" >> /home/vagrant/.bashrc
   SHELL
 end
