--- a/zend-hydrator/Vagrantfile
+++ b/zend-hydrator/Vagrantfile
@@ -66,15 +66,16 @@ Vagrant.configure("2") do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-SHELL
-    apt-get -qq install apt-transport-https lsb-release ca-certificates curl git unzip -y
+    apt-get -qq install apt-transport-https lsb-release ca-certificates curl unzip -y
     wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
     echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > /etc/apt/sources.list.d/php.list
     apt-get -qq update
-    apt-get -qq install php7.1 php7.1-xdebug php7.1-xml php7.1-mbstring -y
+    apt-get -qq install php7.1 php7.1-xdebug php7.1-xml php7.1-mbstring git -y
     curl -Ss https://getcomposer.org/installer | php
     mv composer.phar /usr/bin/composer
     su vagrant
     cd /var/www/zend-hydrator
     composer install --quiet
+    echo "cd /var/www/zend-hydrator" >> /home/vagrant/.bashrc
   SHELL
 end
