--- a/zend-validator/Vagrantfile
+++ b/zend-validator/Vagrantfile
@@ -70,11 +70,11 @@ Vagrant.configure("2") do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", env: {"COMPOSER_ROOT_VERSION" => version }, inline: <<-SHELL
-    apt-get install apt-transport-https lsb-release ca-certificates curl git unzip -y
+    apt-get -qq install apt-transport-https lsb-release ca-certificates curl unzip -y
     wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
     echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > /etc/apt/sources.list.d/php.list
-    apt-get update
-    apt-get install php7.1 php7.1-xdebug php7.1-xml php7.1-curl php7.1-mbstring php7.1-intl -y
+    apt-get -qq update
+    apt-get -qq install php7.1 php7.1-xdebug php7.1-xml php7.1-curl php7.1-mbstring php7.1-intl git -y
     curl -Ss https://getcomposer.org/installer | php
     mv composer.phar /usr/bin/composer
     su vagrant
