--- a/zend-validator/Vagrantfile
+++ b/zend-validator/Vagrantfile
@@ -16,7 +16,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "debian/contrib-jessie64"
+  config.vm.box = "debian/contrib-stretch64"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -70,11 +70,11 @@ Vagrant.configure("2") do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", env: {"COMPOSER_ROOT_VERSION" => version }, inline: <<-SHELL
-    apt-get -qq install apt-transport-https lsb-release ca-certificates curl unzip -y
+    apt-get -qq install apt-transport-https lsb-release ca-certificates unzip -y
     wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
     echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > /etc/apt/sources.list.d/php.list
     apt-get -qq update
-    apt-get -qq install php7.1 php7.1-xdebug php7.1-xml php7.1-curl php7.1-mbstring php7.1-intl git -y
+    apt-get -qq install php7.2 php7.2-xdebug php7.2-xml php7.2-curl php7.2-mbstring php7.2-intl git curl -y
     curl -Ss https://getcomposer.org/installer | php
     mv composer.phar /usr/bin/composer
     su vagrant
