--- a/nightwatch-testing/Vagrantfile
+++ b/nightwatch-testing/Vagrantfile
@@ -38,7 +38,8 @@ Vagrant.configure("2") do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   config.vm.synced_folder ".", "/vagrant", disabled: true
-  config.vm.synced_folder "./repository", "/var/www/nightwatch", type: "virtualbox"
+  config.vm.synced_folder "../nightwatch/repository", "/var/www/nightwatch", type: "virtualbox"
+  config.vm.synced_folder "./assets", "/var/www/assets", type: "virtualbox"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -67,17 +68,15 @@ Vagrant.configure("2") do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-SHELL
-    apt-get -qq install apt-transport-https lsb-release ca-certificates curl git unzip -y
-    wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
-    sh -c 'echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > /etc/apt/sources.list.d/php.list'
     apt-get -qq update
-    apt-get -qq install php7.1 php7.1-xml php7.1-mbstring php7.1-bcmath php7.1-xdebug php7.1-curl -y
-    curl -Ss https://getcomposer.org/installer | php
-    mv composer.phar /usr/bin/composer
-    su vagrant
-    cd /var/www/nightwatch
+    apt-get -qq install apt-transport-https lsb-release ca-certificates curl git software-properties-common unzip -y
+    curl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -
+    wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg
+    echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > /etc/apt/sources.list.d/php.list
+    add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"
+    apt-get -qq update
+    apt-get -qq install php7.1 php7.1-xml php7.1-mbstring php7.1-bcmath php7.1-xdebug php7.1-curl docker-ce -y
     echo "cd /var/www/nightwatch" >> /home/vagrant/.bashrc
-    composer install --quiet
-    ssh-keyscan -H git.ubeeqo.com >> /home/vagrant/.ssh/known_hosts
+    usermod -aG docker vagrant
   SHELL
 end
