dev(install): fix install scripts
Rename datasioning folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-*/.vagrant
-datasionning/repository
-zend-validator/repository
-zend-hydrator/repository
-zend-file/repository
-nightwatch/repository
-codisart-blog/repository
+.vagrant
+/datasioning/repository
+/zend-validator/repository
+/zend-hydrator/repository
+/zend-file/repository
+/nightwatch/repository
+/codisart-blog/repository
