Replace all zend repos by laminas

--- a/laminas-hydrator/docker-compose.yml
+++ b/laminas-hydrator/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   php:
     build: .docker
     volumes:
-      - "./repository:/var/www/zend-file"
-    working_dir: "/var/www/zend-file"
+      - "./repository:/var/www/laminas-hydrator"
+    working_dir: "/var/www/laminas-hydrator"
     entrypoint: ""
     command: "php-fpm"
