--- a/laminas-hydrator/.docker/Dockerfile
+++ b/laminas-hydrator/.docker/Dockerfile
@@ -1,8 +1,9 @@
-FROM php:7.1-fpm
+FROM php:7.2-fpm
 
 RUN apt-get update -yqq \
  && apt-get install -yqq --no-install-recommends apt-utils \
- && apt-get install -yqq git zip unzip
+ && apt-get install -yqq git zip unzip libxml2-dev \
+ && apt-get clean -y
 
 RUN curl -Ss https://getcomposer.org/installer | php -- --filename=composer \
  && chmod a+x composer \
@@ -11,8 +12,7 @@ RUN curl -Ss https://getcomposer.org/installer | php -- --filename=composer \
 
 RUN pecl install xdebug \
  && docker-php-ext-enable xdebug \
- && docker-php-ext-install bcmath
-
+ && docker-php-ext-install mbstring
 
 # Add custom php config
 ADD custom-php.ini /usr/local/etc/php/conf.d/zz-custom-php.ini
